@@ -2,6 +2,14 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Sep 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> dracut-9999.ebuild:
+  Depend on >=baselayout-1.12.13-r1 (only in my overlay at this time).  System
+  won't boot with earlier because Dracut mounts devpts and <=baselayout-1.12.13
+  doesn't check if it's already mounted.
+
+  Moreover removed unnecessary version specifications for dependencies.  Only
+  mandatory are left.
+
   10 Sep 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> -dracut-006-r2.ebuild,
   -dracut-007-r1.ebuild, -files/dracut-006-console_init-not-necessary.patch,
   -files/dracut-006-dhcp6.patch, -files/dracut-006-dm-udev-rules.patch,
